# facebook-mcp-server

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-publish.yml
src/facebook_mcp_server/: .env.example  __init__.py  server.py
