[project]
name = "facebook-mcp-server"
version = "0.1.0"
description = "A simple facebook MCP server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.5.0",
    "requests>=2.0.0"
]

[build-system]
requires = [ "hatchling"]
build-backend = "hatchling.build"

[project.scripts]
facebook-mcp-server = "facebook_mcp_server:main"
